[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/scanner.gd" type="Script" id=1]
[ext_resource path="res://scripts/path_list.gd" type="Script" id=2]

[node name="scanner" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="panel" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="vsplit" type="VSplitContainer" parent="margin"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1915.0
margin_bottom = 1075.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = 240

[node name="path_list" type="PanelContainer" parent="margin/vsplit"]
margin_right = 1910.0
margin_bottom = 769.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="vbox" type="VBoxContainer" parent="margin/vsplit/path_list"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1903.0
margin_bottom = 762.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="hsplit1" type="HSplitContainer" parent="margin/vsplit/path_list/vbox"]
margin_right = 1896.0
margin_bottom = 20.0
split_offset = 360
dragger_visibility = 1

[node name="hsplit11" type="HSplitContainer" parent="margin/vsplit/path_list/vbox/hsplit1"]
margin_right = 1302.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = -550
dragger_visibility = 1

[node name="button1" type="Button" parent="margin/vsplit/path_list/vbox/hsplit1/hsplit11"]
margin_right = 95.0
margin_bottom = 20.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "#"

[node name="button2" type="Button" parent="margin/vsplit/path_list/vbox/hsplit1/hsplit11"]
margin_left = 107.0
margin_right = 1302.0
margin_bottom = 20.0
rect_min_size = Vector2( 80, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Path"

[node name="hsplit12" type="HSplitContainer" parent="margin/vsplit/path_list/vbox/hsplit1"]
margin_left = 1314.0
margin_right = 1896.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
dragger_visibility = 1

[node name="button3" type="Button" parent="margin/vsplit/path_list/vbox/hsplit1/hsplit12"]
margin_right = 285.0
margin_bottom = 20.0
rect_min_size = Vector2( 90, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "File Type"

[node name="button4" type="Button" parent="margin/vsplit/path_list/vbox/hsplit1/hsplit12"]
margin_left = 297.0
margin_right = 582.0
margin_bottom = 20.0
rect_min_size = Vector2( 90, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "File Size"

[node name="hsplit2" type="HSplitContainer" parent="margin/vsplit/path_list/vbox"]
margin_top = 24.0
margin_right = 1896.0
margin_bottom = 755.0
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = 360

[node name="hsplit21" type="HSplitContainer" parent="margin/vsplit/path_list/vbox/hsplit2"]
margin_right = 1302.0
margin_bottom = 731.0
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = -550

[node name="indices" type="ItemList" parent="margin/vsplit/path_list/vbox/hsplit2/hsplit21"]
margin_right = 95.0
margin_bottom = 731.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/line_separation = 10
select_mode = 1

[node name="paths" type="ItemList" parent="margin/vsplit/path_list/vbox/hsplit2/hsplit21"]
margin_left = 107.0
margin_right = 1302.0
margin_bottom = 731.0
rect_min_size = Vector2( 80, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/line_separation = 10
select_mode = 1

[node name="hsplit22" type="HSplitContainer" parent="margin/vsplit/path_list/vbox/hsplit2"]
margin_left = 1314.0
margin_right = 1896.0
margin_bottom = 731.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="types" type="ItemList" parent="margin/vsplit/path_list/vbox/hsplit2/hsplit22"]
margin_right = 285.0
margin_bottom = 731.0
rect_min_size = Vector2( 90, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/line_separation = 10
select_mode = 1

[node name="sizes" type="ItemList" parent="margin/vsplit/path_list/vbox/hsplit2/hsplit22"]
margin_left = 297.0
margin_right = 582.0
margin_bottom = 731.0
rect_min_size = Vector2( 90, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/line_separation = 10
select_mode = 1

[node name="panel2" type="PanelContainer" parent="margin/vsplit"]
margin_top = 781.0
margin_right = 1910.0
margin_bottom = 1070.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="margin" type="MarginContainer" parent="margin/vsplit/panel2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1903.0
margin_bottom = 282.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="vbox" type="VBoxContainer" parent="margin/vsplit/panel2/margin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1886.0
margin_bottom = 265.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="hbox1" type="HBoxContainer" parent="margin/vsplit/panel2/margin/vbox"]
margin_right = 1876.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="import_name" type="LineEdit" parent="margin/vsplit/panel2/margin/vbox/hbox1"]
margin_right = 240.0
margin_bottom = 32.0
rect_min_size = Vector2( 240, 0 )
clear_button_enabled = true
placeholder_text = "Enter a Name for the Import ..."

[node name="space" type="Control" parent="margin/vsplit/panel2/margin/vbox/hbox1"]
margin_left = 250.0
margin_right = 1510.0
margin_bottom = 32.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="add_files" type="Button" parent="margin/vsplit/panel2/margin/vbox/hbox1"]
margin_left = 1520.0
margin_right = 1629.0
margin_bottom = 32.0
text = "  Choose Files  "

[node name="add_folders" type="Button" parent="margin/vsplit/panel2/margin/vbox/hbox1"]
margin_left = 1639.0
margin_right = 1765.0
margin_bottom = 32.0
text = "  Choose Folders  "

[node name="recursively" type="CheckBox" parent="margin/vsplit/panel2/margin/vbox/hbox1"]
margin_left = 1775.0
margin_right = 1876.0
margin_bottom = 32.0
text = "Recursively"

[node name="space" type="Control" parent="margin/vsplit/panel2/margin/vbox"]
margin_top = 36.0
margin_right = 1876.0
margin_bottom = 203.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="hbox2" type="HBoxContainer" parent="margin/vsplit/panel2/margin/vbox"]
margin_top = 207.0
margin_right = 1876.0
margin_bottom = 255.0
rect_min_size = Vector2( 0, 48 )
mouse_filter = 2
size_flags_horizontal = 3

[node name="cancel_import" type="Button" parent="margin/vsplit/panel2/margin/vbox/hbox2"]
margin_right = 118.0
margin_bottom = 48.0
text = "  Cancel Import  "

[node name="space" type="Control" parent="margin/vsplit/panel2/margin/vbox/hbox2"]
margin_left = 122.0
margin_right = 1741.0
margin_bottom = 48.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="begin_import" type="Button" parent="margin/vsplit/panel2/margin/vbox/hbox2"]
margin_left = 1745.0
margin_right = 1876.0
margin_bottom = 48.0
text = "  Begin Importing  "

[connection signal="dragged" from="margin/vsplit/path_list/vbox/hsplit2" to="margin/vsplit/path_list" method="_on_hsplit2_dragged"]
[connection signal="dragged" from="margin/vsplit/path_list/vbox/hsplit2/hsplit21" to="margin/vsplit/path_list" method="_on_hsplit21_dragged"]
[connection signal="gui_input" from="margin/vsplit/path_list/vbox/hsplit2/hsplit21/indices" to="margin/vsplit/path_list" method="_on_indices_gui_input"]
[connection signal="multi_selected" from="margin/vsplit/path_list/vbox/hsplit2/hsplit21/indices" to="margin/vsplit/path_list" method="_on_indices_multi_selected"]
[connection signal="gui_input" from="margin/vsplit/path_list/vbox/hsplit2/hsplit21/paths" to="margin/vsplit/path_list" method="_on_paths_gui_input"]
[connection signal="multi_selected" from="margin/vsplit/path_list/vbox/hsplit2/hsplit21/paths" to="margin/vsplit/path_list" method="_on_paths_multi_selected"]
[connection signal="dragged" from="margin/vsplit/path_list/vbox/hsplit2/hsplit22" to="margin/vsplit/path_list" method="_on_hsplit22_dragged"]
[connection signal="gui_input" from="margin/vsplit/path_list/vbox/hsplit2/hsplit22/types" to="margin/vsplit/path_list" method="_on_types_gui_input"]
[connection signal="multi_selected" from="margin/vsplit/path_list/vbox/hsplit2/hsplit22/types" to="margin/vsplit/path_list" method="_on_types_multi_selected"]
[connection signal="gui_input" from="margin/vsplit/path_list/vbox/hsplit2/hsplit22/sizes" to="margin/vsplit/path_list" method="_on_sizes_gui_input"]
[connection signal="multi_selected" from="margin/vsplit/path_list/vbox/hsplit2/hsplit22/sizes" to="margin/vsplit/path_list" method="_on_sizes_multi_selected"]
[connection signal="button_up" from="margin/vsplit/panel2/margin/vbox/hbox1/add_files" to="." method="_on_add_files_button_up"]
[connection signal="button_up" from="margin/vsplit/panel2/margin/vbox/hbox1/add_folders" to="." method="_on_add_folders_button_up"]
[connection signal="button_up" from="margin/vsplit/panel2/margin/vbox/hbox2/cancel_import" to="." method="_on_cancel_import_button_up"]
[connection signal="button_up" from="margin/vsplit/panel2/margin/vbox/hbox2/begin_import" to="." method="_on_begin_import_button_up"]
